# DwarfLoader

./: CMakeLists.txt  README.md  runconfigure.sh.in
architecture/: ArchBuilder.cpp  ArchBuilder.h  ArchRule.cpp  ArchRule.h  ClassRule.cpp  ClassRule.h  NamespaceRule.cpp  NamespaceRule.h  RegexFileRule.cpp  RegexFileRule.h  RegexNameRule.cpp  RegexNameRule.h  RegexRule.cpp  RegexRule.h
architecture/include/: AndOperatorRule.h  ArchBuilder.h  ArchRule.h  BinaryOperatorRule.h  ClassHierarchyRule.h  ClassRule.h  FunctionRule.h  NamespaceRule.h  NotOperatorRule.h  OrOperatorRule.h  RegexFileRule.h  RegexNameRule.h  RegexRule.h  SetOperatorRule.h  TemplateHelper.h  VariableRule.h
architecture/src/: AndOperatorRule.cpp  ArchBuilder.cpp  ArchRule.cpp  BinaryOperatorRule.cpp  ClassHierarchyRule.cpp  ClassRule.cpp  FunctionRule.cpp  FunctionRule.h  NamespaceRule.cpp  NotOperatorRule.cpp  OrOperatorRule.cpp  RegexFileRule.cpp  RegexNameRule.cpp  RegexRule.cpp  SetOperatorRule.cpp  TemplateHelper.cpp  VariableRule.cpp
architecture/test/: ArchBuilderTest.cpp  Utility.cpp  Utility.h
ast/ast-from-json/: CreateAstFromJson.cpp  CreateAstFromJson.h
ast/nodes/: ASTNode.cpp  ASTNode.h  AndExpression.cpp  AndExpression.h  Artifact.cpp  Artifact.h  AssignmentExpression.cpp  AssignmentExpression.h  AtomExpression.cpp  AtomExpression.h  Component.cpp  Component.h  DefinitionExpression.cpp  DefinitionExpression.h  Expression.cpp  Expression.h  NotExpression.cpp  NotExpression.h  OrExpression.cpp  OrExpression.h  Program.cpp  Program.h  SetExpression.cpp  SetExpression.h
ast/visitor/: ASTVisitor.cpp  ASTVisitor.h  Visitor.cpp  Visitor.h  VisitorContext.cpp  VisitorContext.h
dwarf/: CMakeLists.txt
dwarf/include/: Context.h  CuFileManager.h  Duplicate.h  DwarfException.h  DwarfHelper.h  DwarfReader.h  Filter.h  Type.h
dwarf/include/entities/: Class.h  Image.h  Namespace.h  Routine.h  SoftwareEntity.cpp  SoftwareEntity.h  Variable.h
dwarf/include/guards/: DbgGuard.h  FileGuard.h
dwarf/include/tag/: TagClass.h  TagCompileUnit.h  TagFormalParameter.h  TagGeneric.h  TagInheritance.h  TagMember.h  TagNamespace.h  TagSubprogram.h  TagTypedef.h  TagVariable.h
dwarf/src/: Context.cpp  Duplicate.cpp  DwarfHelper.cpp  DwarfReader.cpp  Filter.cpp  Type.cpp
dwarf/test/: CMakeLists.txt
entities/: Class.h  Image.h  Namespace.h  Routine.h  SoftwareEntity.h  Variable.h
guards/: DbgGuard.h
include/: Context.h  Duplicate.h  DwarfHelper.cpp  DwarfHelper.h  DwarfReader.h  Filter.h
nodejs/: DwarfWrapper.cpp  DwarfWrapper.h  binding.gyp  dwarfReader.js  module.cpp
src/: Context.cpp  Duplicate.cpp  DwarfHelper.cpp  DwarfReader.cpp  Type.cpp  main.cpp
tag/: TagClass.impl  TagCompileUnit.impl  TagGeneric.h  TagInheritance.impl  TagMember.impl  TagNamespace.impl  TagSubprogram.impl  TagTypedef.impl  TagUnionType.impl
test/: CMakeLists.txt  gtest.cpp
